# bia-annales-database-csv

./: .gitignore  README.md  annales-bia.csv
.github/workflows/: deploy.yml
.opencode/plans/: split-sidebar.md
annales-pdf/corrections/: 2023-correction-bia-formatted.txt  2023-correction-bia-gemini.txt  2023-correction-bia.txt
import-q/: README.md  mre.py.txt  pyproject.toml
import-q/src/: __init__.py  cache.py  compare.py  gen-csv.py  import-annales.py  import-pdf.py  import-q.py  log.py  models.py
site/: .prettierrc  AGENTS.md  gpt-02.html  package.json  pnpm-lock.yaml  svelte.config.js  tmux.sh  tsconfig.json  vite.config.ts
site/src/components/: Card.svelte  CardGrid.svelte  Drawer.svelte  Footer.svelte  HamburgerButton.svelte  HamburgerIcon.svelte  Header.svelte  LogoHamburger.svelte  MenuCapsule.svelte  Navigation.svelte  QuizSession.svelte  ScoreRing.svelte  Sidebar.svelte  SubjectConfigMenu.svelte  Toggle.svelte
site/src/lib/: chapter.ts  db.ts  getDb.ts  go.svelte.ts  go.ts  init.ts  log.ts  random.ts  state.svelte.ts  state.ts  subject.ts  types.ts  utils.ts
site/src/lib/icons/: Book.svelte  Calendar.svelte  Plane.svelte  Scroll.svelte  Search.svelte  Settings.svelte
site/src/lib/stores/: attempt.ts  preferences.svelte.ts  questions.ts  session.svelte.ts  session.ts  timeout.svelte.ts
site/src/routes/: +layout.svelte  +layout.ts  +page.svelte  layout.css
site/src/routes/annales/: +page.svelte
site/src/routes/questions/: +page.svelte
site/src/routes/quiz/: +page.svelte
site/static/: annales-bia.csv  annales-bia.tsv
(+4 files in other folders)
